fixed spacing and update readme

--- a/scss/_entry.scss
+++ b/scss/_entry.scss
@@ -129,6 +129,7 @@
 		margin: 20px auto;
 		background-color: darken($soft-white, 5%);
 		p{
+			font-weight: bold;
 			font-family: 'prompt', arial;
 			margin-bottom: 0;
 		}
