--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -66,6 +66,7 @@
 				text-transform: uppercase;
 				color: $coal;
 				text-decoration: none;
+				font-weight: bold;
 				letter-spacing: 0px;
 				@media #{$sm}{
 					font-size: 14px;
